# android-webclient

./: .env.example  .gitignore  AndroidManifest.xml  Dockerfile  README.md  build.sh  build.xml  build_worker.py  release.keystore
res/values/: strings.xml
server/: Cargo.toml
server/src/: build.rs  handlers.rs  main.rs
server/templates/: index.html  status.html
src/com/gordarg/app/: MainActivity.java  R.java  WebViewClientImpl.java
static/: style.css
template/: AndroidManifest.xml  build.xml
template/res/values/: strings.xml
template/src/com/gordarg/app/: MainActivity.java  WebViewClientImpl.java
